[package]
name = "wow-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
async-trait = "0.1"
md5 = "0.7"

pow-client = { package = "pow-client", path = "../../libs/pow-client" }
pow-common = { package = "pow-common", path = "../../libs/pow-common" }
wow-common = { package = "wow-common", path = "../../libs/wow-common" }
