[package]
name = "wow-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
md5 = "0.7"
rand = "0.8"

pow-common = { package = "pow-common", path = "../../libs/pow-common" }
wow-common = { package = "wow-common", path = "../../libs/wow-common" }
