[package]
name = "pow-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
serde = { version = "^1", features = ["derive"] }

pow-common = { package = "pow-common", path = "../../libs/pow-common" }